infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hookpress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: hook.press
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hookpress-web
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: hookpress-api
                port:
                  number: 8000
